add MapBox API integration for autocomplete/suggestions for location

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-BACKEND_API_URL=http://localhost:5004
-
+NEXT_PUBLIC_BACKEND_API_URL=http://localhost:5004
+MAPBOX_TOKEN=tokenFromMapBox.com
+NEXTAUTH_SECRET=seeeecreyyyt
+NODE_ENV=developmentorproduction
